<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/moviesFragment"
            android:icon="@drawable/ic_movie"
            android:title="@string/movies" />
        <item
            android:id="@+id/tvShowsFragment"
            android:icon="@drawable/ic_tv"
            android:title="@string/tv_shows" />
        <item
            android:id="@+id/booksMarksFragment"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/watch_lists" />
        <item
            android:id="@+id/webViewFragment"
            android:icon="@drawable/ic_database"
            android:title="@string/tmdb" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_person"
            android:title="@string/about" />

    </group>

</menu>